objects/TracRTC__User_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Error_Message__c</fullName>
        <description>To hold the error message for an invalid user group member.</description>
        <label>Error_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Round_Robin_Score__c</fullName>
        <label>Round Robin Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Round_Robin_Weight__c</fullName>
        <label>Round Robin Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__User_Group__c</fullName>
        <label>User Group</label>
        <referenceTo>TracRTC__User_Group__c</referenceTo>
        <relationshipLabel>User Group Members</relationshipLabel>
        <relationshipName>User_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracRTC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Group Member</label>
    <nameField>
        <label>User Group Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>